# FAST-OAD

./: pyproject.toml  ruff.toml
